src/css/docs.css
html.docs-doc-id-intro body {
  background-color: #1C1C1C;
}

html.docs-doc-id-intro .navbar {
  border-bottom: 2px solid var(--color-yellow);
  height: fit-content;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  background-color: #1C1C1C;
}

html.docs-doc-id-intro .navbar__item {
    font-size: 1.5rem;
    font-weight: 700;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 0px;
}

html.docs-doc-id-intro .navbar__items {
    align-items: center;
}

html.docs-doc-id-intro .navbar__logo {
    margin-bottom: 1.5rem;
    margin-left: 1.5rem;
    height: 1.5rem;
}

html.docs-doc-id-intro .navbar,
.main-wrapper {
  margin: 0 auto;
  width: 100%;
}

html.docs-doc-id-intro #__docusaurus {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

html.docs-doc-id-intro .navbar-sidebar
  .navbar-sidebar__item:last-child
  .clean-btn.navbar-sidebar__back::before {
  display: inline-block;
  content: url('/img/arrow-yellow.svg');

  position: relative;
}

html.docs-doc-id-intro aside .menu__link {
  color: var(--ifm-menu-color);
  padding-top: 0rem;
  padding-bottom: 0rem;
  height: 18px;
}

html.docs-doc-id-intro aside aside .menu__link {
  padding-left: 0;
}

html.docs-doc-id-intro aside aside .menu__link li a {
  padding-left: 0;
}

html.docs-doc-id-intro aside aside .menu__link--active {
  padding-left: 0;
}

html.docs-doc-id-intro .thin-scrollbar {
  color: white;
  letter-spacing: 1px;
  margin-top: 24px;
}

html.docs-doc-id-intro aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
    top: auto;
}

@media (min-width: 997px) {
  aside.docSidebarContainer_src-layout-DocPage-styles-module,
  aside.theme-doc-sidebar-container {
    border-right: 1px solid var(--color-white);
    margin-right: 1.5rem !important;
  }
}

@media (min-width: 997px) {
  .menu_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-Content-styles-module {
    flex-grow: 1;
    padding-left: 0rem !important;
    font-size: large;
  }
}


/* Article styling */

article .markdown p {
  font-weight: var(--typography-body-1-d-font-weight);
  font-size: var(--typography-body-1-d-font-size);
  line-height: var(--typography-body-1-d-line-height);
  letter-spacing: 1px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: white;
}

article .markdown li {
  font-weight: var(--typography-body-1-d-font-weight);
  font-size: var(--typography-body-1-d-font-size);
  line-height: var(--typography-body-1-d-line-height);
  letter-spacing: 1px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: white;
}

article .markdown blockquote {
  color: white;
  font-style: normal;
  font-weight: 300;
}

article .markdown blockquote b {
  color: white;
  font-style: normal;
  font-weight: 800;
}

article .theme-code-block pre {
  background: #232323;
}

article .theme-code-block pre code .token-line span {
  color: white;;
}

article .markdown p {
  font-weight: var(--typography-body-1-d-font-weight);
  font-size: var(--typography-body-1-d-font-size);
  line-height: var(--typography-body-1-d-line-height);
  letter-spacing: 1px;
  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
}

article .markdown p code {
  color: white;
  background-color: gray;
}

.pagination-nav__sublabel {
  display: none;
}

.pagination-nav__label {
  color: white;
  letter-spacing: 1px;
  font-weight: 400;
  text-decoration: none;
}

.thin-scrollbar {
  color: white;
  letter-spacing: 1px;
  margin-top: 24px;
  top: 0 !important;
}

.thin-scrollbar ul li a {
  color: white;
}

article header h1 {
  font-weight: var(--typography-h1-d-font-weight);
  font-size: var(--typography-h1-d-font-size);
  line-height: var(--typography-h1-d-line-height);
  letter-spacing: 1px;
  color: var(--color-yellow)
}

article time {
  color: white;
}

.avatar {
  color: white;
}

.navbar__link {
  color: white;
}

.navbar__link:hover {
  color: var(--color-yellow);
}

.navbar__link--active {
  color: var(--color-yellow);
}

.thin-scrollbar ul li a:hover {
  color: var(--color-yellow);
}

.thin-scrollbar {
  border-right: 1px solid var(--color-white);

}

.sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogSidebar-styles-module {
  color: var(--color-yellow);
}

article h2 {
  color: var(--color-yellow);
}

.markdown h1:first-child {
  font-size: 1.8rem;
}


ul.table-of-contents li a code,
ul.table-of-contents li code {
  background-color: transparent;
}

.table-of-contents__link:hover,
.table-of-contents__link:hover code,
.table-of-contents__link--active,
.table-of-contents__link--active code {
  color: var(--color-yellow);
  text-decoration: none;
  font-weight: 700 !important;
}

.table-of-contents a strong {
  color: white !important;
}

.table-of-contents li {
  margin: 0.75rem 1.5rem;
}

.table-of-contents__link {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.375rem;
}

.table-of-contents__left-border {
  border-left: 2px solid white !important;
}

.table-of-contents__left-border li {
  margin: 0;
  padding: 0;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* API docs */

html.docs-doc-id\/index body {
  background-color: #1C1C1C;
}

html.docs-doc-id\/index .navbar {
  border-bottom: 2px solid var(--color-yellow);
  height: fit-content;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  background-color: #1C1C1C;
}

html.docs-doc-id\/index .navbar__item {
    font-size: 1.5rem;
    font-weight: 700;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 0px;
}

html.docs-doc-id\/index .navbar__items {
    align-items: center;
}

html.docs-doc-id\/index .navbar__logo {
    margin-bottom: 1.5rem;
    margin-left: 1.5rem;
    height: 1.5rem;
}

html.docs-doc-id\/index .navbar,
.main-wrapper {
  margin: 0 auto;
  width: 100%;
}

html.docs-doc-id\/index #__docusaurus {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

html.docs-doc-id\/index .navbar-sidebar
  .navbar-sidebar__item:last-child
  .clean-btn.navbar-sidebar__back::before {
  display: inline-block;
  content: url('/img/arrow-yellow.svg');

  position: relative;
}

html.docs-doc-id\/index aside .menu__link {
  color: var(--ifm-menu-color);
  padding-top: 0rem;
  padding-bottom: 0rem;
  height: 18px;
}

html.docs-doc-id\/index aside aside .menu__link {
  padding-left: 0;
}

html.docs-doc-id\/index aside aside .menu__link li a {
  padding-left: 0;
}

html.docs-doc-id\/index aside aside .menu__link--active {
  padding-left: 0;
}

html.docs-doc-id\/index .thin-scrollbar {
  color: white;
  letter-spacing: 1px;
  margin-top: 24px;
}

html.docs-doc-id\/index aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
    top: auto;
}

